<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/filter_dialog_title"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/sort_by_option"
        android:textSize="18sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tag_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/by_tag_option"
        android:textSize="18sp" />
</LinearLayout>